// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Nav JavascriptMethods renders 1`] = `
<Fragment>
  <h2
    id="javascript-methods"
  >
    JavaScript methods
  </h2>
  <JavascriptDocs
    close={true}
    componentName="nav"
    open={true}
  />
</Fragment>
`;

exports[`Component: Nav StandardNav renders 1`] = `
<Fragment>
  <h2
    id="nav-standard"
  >
    Standard nav
  </h2>
  <p>
    To use our reccommended nav add 
    <CodeTags
      code=".nav"
      type="secondary"
    />
     and 
    <CodeTags
      code=".nav-<desired_size>-vertical-wide"
      type="secondary"
    />
    . This gives you a nav with a breakpoint at the size set in the class name. In the example we use 
    <CodeTags
      code="lg"
      type="secondary"
    />
    , resize this window to see it in action.
  </p>
  <p>
    When the nav is in mobile view it will hide menu elements if they total more than 5. Menu elements with a submenu will also be hidden and only viewable when the nav is expanded.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Nav
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
            "subItems": Array [
              "Purchase history",
              "Invoice",
            ],
          },
          Object {
            "icon": "notification_important",
            "name": "Notifications",
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
          },
          Object {
            "icon": "fingerprint",
            "name": "Authentication",
          },
        ]
      }
      widesize="lg"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Nav WithIconsOnly renders 1`] = `
<Fragment>
  <h2
    id="icons-only"
  >
    Icons only
  </h2>
  <p>
    If you want to show only icons at a certain breakpoint then include 
    <CodeTags
      code=".nav-<desired_size>-vertical"
      type="secondary"
    />
     with your nav component.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Nav
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
            "subItems": Array [
              "Purchase history",
              "Invoice",
            ],
          },
          Object {
            "icon": "notification_important",
            "name": "Notifications",
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
          },
          Object {
            "icon": "fingerprint",
            "name": "Authentication",
          },
        ]
      }
      vertsize="md"
      widesize="lg"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Nav renders 1`] = `
<DocContainer>
  <Alert
    icon="error"
    text={
      <p>
        <b>
          Deprecated:
        </b>
         Be aware, this component will not be maintained anymore. Instead, consider using the 
        <a
          href="/components/topbar"
        >
          topbar
        </a>
         or 
        <a
          href="/components/sidebar"
        >
          sidebar
        </a>
        .
      </p>
    }
    type="danger"
  />
  <p
    className="lead"
  >
    Use navs to create a basic navigational element containing links.
  </p>
  <StandardNav />
  <WithIconsOnly />
  <JavascriptMethods />
  <NpmInformation
    componentName="nav"
  />
</DocContainer>
`;
